src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@pre-mem2reg@llvm14_tket.quantum.CX.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private { %Qubit*, %Qubit* } @_hl.main.1(%Qubit* %0, %Qubit* %1) {
alloca_block:
  %"0" = alloca %Qubit*, align 8
  %"1" = alloca %Qubit*, align 8
  %"2_0" = alloca %Qubit*, align 8
  %"2_1" = alloca %Qubit*, align 8
  %"4_0" = alloca %Qubit*, align 8
  %"4_1" = alloca %Qubit*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %Qubit* %0, %Qubit** %"2_0", align 8
  store %Qubit* %1, %Qubit** %"2_1", align 8
  %"2_01" = load %Qubit*, %Qubit** %"2_0", align 8
  %"2_12" = load %Qubit*, %Qubit** %"2_1", align 8
  call void @__quantum__qis__cx__body(%Qubit* %"2_01", %Qubit* %"2_12")
  store %Qubit* %"2_01", %Qubit** %"4_0", align 8
  store %Qubit* %"2_12", %Qubit** %"4_1", align 8
  %"4_03" = load %Qubit*, %Qubit** %"4_0", align 8
  %"4_14" = load %Qubit*, %Qubit** %"4_1", align 8
  store %Qubit* %"4_03", %Qubit** %"0", align 8
  store %Qubit* %"4_14", %Qubit** %"1", align 8
  %"05" = load %Qubit*, %Qubit** %"0", align 8
  %"16" = load %Qubit*, %Qubit** %"1", align 8
  %mrv = insertvalue { %Qubit*, %Qubit* } undef, %Qubit* %"05", 0
  %mrv7 = insertvalue { %Qubit*, %Qubit* } %mrv, %Qubit* %"16", 1
  ret { %Qubit*, %Qubit* } %mrv7
}

declare void @__quantum__qis__cx__body(%Qubit*, %Qubit*)
