src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@pre-mem2reg@llvm14_tket.quantum.MeasureFree.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque
%Result = type opaque

define private i1 @_hl.main.1(%Qubit* %0) {
alloca_block:
  %"0" = alloca i1, align 1
  %"2_0" = alloca %Qubit*, align 8
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %Qubit* %0, %Qubit** %"2_0", align 8
  %"2_01" = load %Qubit*, %Qubit** %"2_0", align 8
  %1 = call %Result* @__QIR__CONV_Qubit_TO_Result(%Qubit* %"2_01")
  call void @__quantum__qis__mz__body(%Qubit* %"2_01", %Result* %1)
  call void @__quantum__rt__qubit_release(%Qubit* %"2_01")
  %2 = call i1 @__quantum__qis__read_result__body(%Result* %1)
  %3 = select i1 %2, i1 true, i1 false
  store i1 %3, i1* %"4_0", align 1
  %"4_02" = load i1, i1* %"4_0", align 1
  store i1 %"4_02", i1* %"0", align 1
  %"03" = load i1, i1* %"0", align 1
  ret i1 %"03"
}

declare %Result* @__QIR__CONV_Qubit_TO_Result(%Qubit*)

declare void @__quantum__qis__mz__body(%Qubit*, %Result*)

declare void @__quantum__rt__qubit_release(%Qubit*)

declare i1 @__quantum__qis__read_result__body(%Result*)
